fixing all required methods by mentor